--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 GITHUB_USERNAME=aronvaupel
 GITHUB_TOKEN=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
+JWT_SECRET=secret
+GUEST_PASSWORD=guest
+REDIS_HOST=localhost
+REDIS_PORT=6379
+SPRING_DATASOURCE_USERNAME=username
+SPRING_DATASOURCE_PASSWORD=password
