--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: userservice
   datasource:
-    url: jdbc:postgresql://localhost:5432/your_database_name
-    username: username
-    password: password
+    url: jdbc:postgresql://localhost:5432/UserServiceDb
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: update
@@ -15,6 +15,10 @@ spring:
   docker:
     compose:
       enabled: false
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
 github:
     username: ${GITHUB_USERNAME}
     token: ${GITHUB_TOKEN}
