--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,7 @@ spring:
       ddl-auto: update
     show-sql: true
     properties:
+      '[hypersistence.utils.enable_types_contributor]': false
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
   docker:
