--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: userservice
+  kafka:
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
   datasource:
     url: jdbc:postgresql://localhost:5432/UserServiceDb
     username: ${SPRING_DATASOURCE_USERNAME}
@@ -23,3 +25,7 @@ spring:
 github:
     username: ${GITHUB_USERNAME}
     token: ${GITHUB_TOKEN}
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka-server:8761/eureka/
