--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,10 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
+  docker:
+    compose:
+      enabled: false
+
   data:
     redis:
       host: ${REDIS_HOST}
