--- a/src/main/resources/application.dev.yml
+++ b/src/main/resources/application.dev.yml
@@ -21,3 +21,9 @@ eureka:
     register-with-eureka: false
     service-url:
       defaultZone: ""
+
+logging:
+  level:
+    com.netflix.discovery: OFF
+    com.netflix.eureka: OFF
+    org.springframework.cloud.netflix.eureka: OFF
