--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,10 +1,12 @@
 spring:
+  main:
+    allow-bean-definition-overriding: true
   datasource:
     url: jdbc:postgresql://localhost:5432/userservicedb
     username: username
     password: password
   kafka:
-    bootstrap-servers: aron:9092
+    bootstrap-servers: 127.0.1.1:9092
   jpa:
     hibernate:
       ddl-auto: update
