rename ContactData to UserInfo and create first test for UserService

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ JWT_SECRET=secret
 GUEST_PASSWORD=guest
 REDIS_HOST=redis
 REDIS_PORT=6379
+SPRING_DATASOURCE_URL=jdbc:postgresql://postgresql_user-service:5432/UserServiceDB
 SPRING_DATASOURCE_USERNAME=username
 SPRING_DATASOURCE_PASSWORD=password
 KAFKA_BOOTSTRAP_SERVERS=kafka:9092
