Remove Docker Compose setup and switch to static application config
Docker Compose and environment variable dependencies have been removed, simplifying the configuration process. Application settings now use hardcoded values directly in the configuration files. This approach eliminates the need for `.env` and external runtime dependencies like Kafka, PostgreSQL, and Redis, favoring a static, local profile setup.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,11 +4,11 @@ spring:
   application:
     name: user-service
   kafka:
-    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
+    bootstrap-servers: kafka:9092
   datasource:
-    url: ${USERSERVICE_DATASOURCE_URL}
-    username: ${USERSERVICE_DATASOURCE_USERNAME}
-    password: ${USERSERVICE_DATASOURCE_PASSWORD}
+    url: jdbc:postgresql://postgresql_user-service:5432/UserServiceDB
+    username: username
+    password: password
   jpa:
     hibernate:
       ddl-auto: update
@@ -29,8 +29,8 @@ spring:
 
   data:
     redis:
-      host: ${REDIS_HOST}
-      port: ${REDIS_PORT}
+      host: redis
+      port: 6379
 
 management:
   endpoints:
