Set Kafka consumer auto-offset-reset to earliest
This configuration ensures that any new consumer group starts reading messages from the earliest available offset. It enhances reliability in message processing, especially during initial setups or consumer group resets.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,8 @@ spring:
     name: user-service
   kafka:
     bootstrap-servers: kafka:9092
+    consumer:
+      auto-offset-reset: earliest
   datasource:
     url: jdbc:postgresql://postgresql_user-service:5432/UserServiceDB
     username: username
