add springdoc to application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,4 +61,10 @@ pseudo-properties: true
 
 permissions: true
 
-
+springdoc:
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui
+    display-request-duration: true
+  api-docs:
+    path: /v3/api-docs
